--- a/hw02-annotation-config/pom.xml
+++ b/hw02-annotation-config/pom.xml
@@ -17,6 +17,7 @@
         <opencsv.version>5.8</opencsv.version>
         <junit.version>5.10.0</junit.version>
         <mockito.version>5.4.0</mockito.version>
+        <mockito-jupiter.version>5.3.1</mockito-jupiter.version>
         <assertj.version>3.24.2</assertj.version>
         <lombok.version>1.18.30</lombok.version>
         <checkstyle-plugin.version>3.2.2</checkstyle-plugin.version>
@@ -51,6 +52,13 @@
             <artifactId>junit-jupiter-engine</artifactId>
             <scope>test</scope>
             <version>${junit.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
+            <scope>test</scope>
+            <version>${mockito-jupiter.version}</version>
         </dependency>
 
         <dependency>
@@ -105,7 +113,22 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
                 <version>3.3.0</version>
-                <!--Настроить для создания jar с зависимостями-->
+                <executions>
+                    <execution>
+                        <id>hw_2</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <transformers>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    <mainClass>ru.otus.hw.Application</mainClass>
+                                </transformer>
+                            </transformers>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
