--- a/hw03-spring-boot/src/main/resources/application.yml
+++ b/hw03-spring-boot/src/main/resources/application.yml
@@ -1,13 +1,14 @@
 spring:
   messages:
-    baseName: messages
+    baseName: "i18n/messages"
     encoding: UTF-8
     # Не дает свалиться в системную локаль если не найден файл для переданной в MessageSource
     # Если false то будут браться сообщения из дефолтного файла, если true, то из файла соответствующего системной локали
     fallbackToSystemLocale: false
-test:
+application:
   rightAnswersCountToPass: 3
   locale: en-US
   fileNameByLocaleTag:
     ru-RU: questions_ru.csv
     en-US: questions.csv
+    es-ES: questions_es.csv
