конфигурация для jpa и новой таблицы comment

--- a/hw06-jpa-hard/src/main/resources/application.yml
+++ b/hw06-jpa-hard/src/main/resources/application.yml
@@ -4,6 +4,11 @@ spring:
   h2:
     console:
       enabled: true
+  jpa:
+    generate-ddl: false
+    hibernate:
+      ddl-auto: none
+    show-sql: false
   sql:
     init:
       mode: always
