конфигурация для jpa и новой таблицы comment для теста

--- a/hw06-jpa-hard/src/test/resources/application.yml
+++ b/hw06-jpa-hard/src/test/resources/application.yml
@@ -6,3 +6,8 @@ spring:
       mode: always
       data-locations: data.sql
       schema-locations: schema.sql
+  jpa:
+    generate-ddl: false
+    hibernate:
+      ddl-auto: none
+    show-sql: false
