--- a/hw14-spring-batch/src/main/resources/application.yml
+++ b/hw14-spring-batch/src/main/resources/application.yml
@@ -1,17 +1,19 @@
 spring:
+  data:
+    mongodb:
+      port: 27017
+      database: batch-example
+      host: localhost
   datasource:
     url: jdbc:h2:mem:maindb
-  h2:
-    console:
-      enabled: true
-  jpa:
-    generate-ddl: false
-    hibernate:
-      ddl-auto: none
-    show-sql: false
   sql:
     init:
       mode: always
       data-locations: data.sql
       schema-locations: schema.sql
+  jpa:
+    generate-ddl: false
+    hibernate:
+      ddl-auto: none
+    show-sql: true
 
