--- a/hw14-spring-batch/src/test/resources/application.yml
+++ b/hw14-spring-batch/src/test/resources/application.yml
@@ -1,4 +1,13 @@
 spring:
+  batch:
+    job:
+      enabled: false
+  shell:
+    interactive:
+      enabled: false
+    command:
+      version:
+        enabled: false
   datasource:
     url: jdbc:h2:mem:testdb
   sql:
@@ -10,4 +19,18 @@ spring:
     generate-ddl: false
     hibernate:
       ddl-auto: none
-    show-sql: false
+    show-sql: true
+  data:
+    mongodb:
+      port: 27017
+      database: test
+      host: localhost
+
+mongock:
+  runner-type: applicationrunner
+  change-logs-scan-package:
+    - ru.otus.hw.mongock.changelog
+  mongo-db:
+    write-concern:
+      journal: false
+    read-concern: local
